--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="https://cdn-icons.flaticon.com/png/512/2838/premium/2838838.png?token=exp=1634886861~hmac=d5fee2387acca68a036c976ce46331a3
+    "
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,12 +31,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Shopping Car</title>
+    <title>React Shopping Cart</title>
     <style>
       * {
         margin: 0;
         box-sizing: border-box;
         font-family: "Urbanist", "Poppins", sans-serif;
+      }
+      a {
+        text-decoration: none;
+        color: black;
       }
     </style>
   </head>
